test/files/pos/t5900a.scala
case class Transition[S](x: S)

object C

object Test {
  (??? : Any) match {
    case Transition(C) =>
  }
}
