test/files/neg/macro-invalidshape-c/Impls_1.scala
import scala.reflect.makro.{Context => Ctx}

object Impls {
  def foo(c: Ctx)(x: c.Expr[Any]) = ???
}
